--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -32,7 +32,7 @@
         <div class="jumbotron">
             <div class="row text-center">
                 <div class="">
-                    <h2>Spring Framework Guru</h2>
+                    <h2>Spring Framework Updated Guru</h2>
 
                     <h3>Spring Boot Web App</h3>
                 </div>
